طراحی سمت چت هدر بالا

--- a/index.html
+++ b/index.html
@@ -37,6 +37,25 @@
                         </div>  
                     </div>
                 </div>
+                <div class="col-4">
+                    <div class="top-menu">
+                        <nav class="nav-top-menu">
+                            <ul>
+                                <li><a href="#">راهنما<span class="icon"><span class="iconify" data-icon="octicon:chevron-left-16" data-inline="false"></span></span></a></li>
+                                <li><a href="#">خدمات<span class="icon"><span class="iconify" data-icon="octicon:chevron-left-16" data-inline="false"></span></span></a></li>
+                                <li><a href="#">پشتیبانی<span class="icon"><span class="iconify" data-icon="octicon:chevron-left-16" data-inline="false"></span></span></a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="search-header">
+                        <form action="#" method="get">
+                            <input type="text" name="search-header" class="search-header" placeholder="برای جستجو نام مطلب را وارد کنید">
+                            <button type="submit">
+                                <span class="iconify"><span class="iconify" data-icon="octicon:search-24" data-inline="false" style="color: #fff;"></span></span>
+                            </button>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
 </header>
