اضافه دکمه ورود کاربران و اضافه کردن modal

--- a/index.html
+++ b/index.html
@@ -55,7 +55,36 @@
                             </button>
                         </form>
                     </div>
+                    <div class="log-icon">
+                        <button  type="button" class="btn-log" data-toggle="modal" data-target="#log-modal-header">
+                            <span class="iconify">
+                                <span class="iconify" data-icon="heroicons-solid:user-circle" data-inline="false"></span>
+                            </span>
+                        </button>
+                    </div>
                 </div>
+
+                <!-- Modal -->
+<div class="modal fade log-modal-header" id="log-modal-header" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
             </div>
         </div>
 </header>
