--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                                             <span class="v-iran">VER 1</span>
                                         </div>
                                         <div class="social">
-                                            <a href="#"><span class="iconify" data-icon="ph:instagram-logo-fill" data-inline="false"></span></a>
-                                            <a href="#"><span class="iconify" data-icon="cib:telegram" data-inline="false"></span></a>
-                                            <a href="#"><span class="iconify" data-icon="dashicons:whatsapp" data-inline="false"></span></a>
+                                            <a href="#" data-toggle="tooltip" data-placement="top" title="اینستاگرام"><span class="iconify" data-icon="ph:instagram-logo-fill" data-inline="false"></span></a>
+                                            <a href="#" data-toggle="tooltip" data-placement="top" title="تلگرام"><span class="iconify" data-icon="cib:telegram" data-inline="false"></span></a>
+                                            <a href="#" data-toggle="tooltip" data-placement="top" title="واتس آپ"><span class="iconify" data-icon="dashicons:whatsapp" data-inline="false"></span></a>
                                         </div>
                                     </div>
                                     <div class="hadis">
