--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 <header class="main-header">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-sm-12 col-md-8">
+                <div class="col-sm-12 col-md-12 col-lg-8">
                     <div class="row">
 
-                        <div class="col-2 d-none d-md-block logo">
+                        <div class="col-2 d-none d-md-block col-md-3 col-lg-2 justify-content-center align-items-center logo">
                             <img src="image/pic-logo.svg" alt="">
                         </div>
 
-                        <div class="col-xl-10 ">
+                        <div class="col-sm-12 col-md-9 col-lg-10 ">
                             <div class="name-logo">
 
                                 <span class="title-info">طراحی و پشتیبانی وب سایت </span>
@@ -50,7 +50,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-4 d-none d-lg-block">
                     <div class="top-menu">
                         <nav class="nav-top-menu">
                             <ul>
@@ -77,28 +77,28 @@
                     </div>
                 </div>
 
-                <!-- Modal -->
+                
+            </div>
+            <!-- Modal -->
 <div class="modal fade log-modal-header" id="log-modal-header" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">ورود به ایران پشتیبانی</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          ...
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div>
+<div class="modal-dialog">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h5 class="modal-title" id="exampleModalLabel">ورود به ایران پشتیبانی</h5>
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      ...
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      <button type="button" class="btn btn-primary">Save changes</button>
     </div>
   </div>
-
-            </div>
+</div>
+</div>
         </div>
 </header>
   <!--------js ------->  
