منو های اصلی هدر

--- a/index.html
+++ b/index.html
@@ -79,6 +79,23 @@
 
                 
             </div>
+            <div class="row">
+                <nav class="navbar navbar-expand-lg navbar-light main-menu">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-menu-nav" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse main-menu-nav" id="main-menu-nav">
+                    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                        <li class="nav-item active"><a href="#">خانه</a></li>
+                        <li class="nav-item"><a href="#">طراحی وب سایت</a></li>
+                        <li class="nav-item"><a href="#">آموزش ها</a></li>
+                        <li class="nav-item"><a href="#">نمونه کار ها</a></li>
+                        <li class="nav-item"><a href="#">برنامه نویسان</a></li>
+                        <li class="nav-item"><a href="#">دانلود ها</a></li>
+                    </ul>
+                    </div>
+                </nav>
+            </div>
             <!-- Modal -->
 <div class="modal fade log-modal-header" id="log-modal-header" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 <div class="modal-dialog">
