رفع مشکلات و استایل دهی بهینه

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             <div class="name-logo">
 
                                 <span class="title-info">طراحی و پشتیبانی وب سایت </span>
-                                <div class="title">
+                                <div class="title d-flex">
                                         <div class="title-logo">
                                             <a href="#">ایــــران پــشـتیبــــانی</a>
                                             <span class="v-iran">VER 1</span>
@@ -50,8 +50,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4 d-none d-lg-block">
-                    <div class="top-menu">
+                <div class="col-4 d-none d-lg-block ">
+                    <div class="top-menu  d-flex">
                         <nav class="nav-top-menu">
                             <ul>
                                 <li><a href="#">راهنما<span class="icon"><span class="iconify" data-icon="octicon:chevron-left-16" data-inline="false"></span></span></a></li>
@@ -61,14 +61,14 @@
                         </nav>
                     </div>
                     <div class="search-header">
-                        <form action="#" method="get">
+                        <form class=" d-flex" action="#" method="get">
                             <input type="text" name="search-header" class="search-header" placeholder="برای جستجو نام مطلب را وارد کنید">
                             <button type="submit">
                                 <span class="iconify"><span class="iconify" data-icon="octicon:search-24" data-inline="false" style="color: #fff;"></span></span>
                             </button>
                         </form>
                     </div>
-                    <div class="log-icon">
+                    <div class="log-icon d-flex justify-content-start">
                         <button  type="button" class="btn-log" data-toggle="modal" data-target="#log-modal-header">
                             <span class="iconify" data-toggle="tooltip" data-placement="right" title="ورود به ایران پشتیبانی">
                                 <span class="iconify" data-icon="heroicons-solid:user-circle" data-inline="false"></span>
