--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4 d-none d-lg-block ">
-                    <div class="top-menu  d-flex">
+                <div class="col-4 d-none d-lg-block">
+                    <div class="top-menu ">
                         <nav class="nav-top-menu">
                             <ul>
                                 <li><a href="#">راهنما<span class="icon"><span class="iconify" data-icon="octicon:chevron-left-16" data-inline="false"></span></span></a></li>
@@ -110,8 +110,8 @@
       ...
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-      <button type="button" class="btn btn-primary">Save changes</button>
+      <button type="button" class="btn btn-secondary" data-dismiss="modal">صرف نظر</button>
+      <button type="button" class="btn btn-primary">ذخیره تغییرات</button>
     </div>
   </div>
 </div>
