--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
             <div class="col">
                 <div class="ex-name">
-                    <span>طراحی وب سایت </span>
+                    <span>طـــــراحی و پـشتـیـبانی  </span>
                 </div>
             </div>
 
@@ -27,7 +27,7 @@
 
         <div class="row">
 
-            <div class="col-4">
+            <div class="col-12">
 
                 <div class="logo-social">
                     
@@ -47,16 +47,15 @@
                 </div>
             </div><!------logo name------->
 
+            <div class="col-2">
+                <div class="nav-menu ">
 
-
-            <div class="col-6">
-                <div class="nav-menu d-flex justify-content-start align-content-center">
-
-                    <nav class="navbar navbar-expand-lg navbar-light">
+                    <nav class="navbar navbar-expand-sm">
 
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-main-menu"
                             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
+                            <span class="">منو</span>
+
                         </button>
 
                         <div class="collapse navbar-collapse" id="navbar-main-menu">
@@ -118,9 +117,9 @@
                 
             </div><!--------nav menu--------->
 
-            <div class="col-1">
+            <div class="col-8">
 
-                <div class="moshavere">
+                <div class="moshavere  d-flex align-items-center justify-content-center">
                     <a href="#" class="tell-moha">
                         مشاوره<span class="icon-tell"><span class="iconify" data-icon="eva:phone-call-fill" data-inline="false"></span></span>     
                     </a>
@@ -129,8 +128,8 @@
 
             </div><!-------box tell--------->
 
-            <div class="col-1">
-                <div class="log">
+            <div class="col-2">
+                <div class="log d-flex align-items-center justify-content-center">
                     <a href="#" class="icon-log">
                         <span class="iconify" data-icon="bx:bxs-user-circle" data-inline="false"></span>
                     </a>
