add and edit col

--- a/test.html
+++ b/test.html
@@ -58,23 +58,38 @@
                     </div>
                 </div><!------------Box Consultant----------------->
 
-                <div class="col-3 col-sm-3 col-md-1 d-flex justify-content-center">
+                <div class="col-3 col-sm-3 col-md-1 d-flex justify-content-around">
+                    <div class="row  d-flex justify-content-around">
+                        <div class="col">
+                            <div class="button-login">
+                                <button class="btn-cyan-600">
+                                        <span class="iconify" data-inline="false" data-icon="fa-solid:house-user"></span>
+                                </button>
+                            </div>
 
-                    <div class="button-login">
-                        <button class="btn-cyan-600">
-                                <span class="iconify" data-inline="false" data-icon="fa-solid:house-user"></span>
-                        </button>
+                        </div>
+
+                        <div class="col d-md-none">
+                            <div class="button-menu">
+                                <button class="btn-blue-400 ">
+                                    <span class="iconify" data-inline="false" data-icon="line-md:menu-unfold-left"></span>
+                                </button>
+                            </div><!-----Button Menu    --------->
+
+                        </div>
                     </div>
-                </div><!-----------Buttons---------->
 
 
-                    <!-- <div class="button-menu">
-                        <button class="btn-blue-400 ">
-                            <span class="iconify" data-inline="false" data-icon="line-md:menu-unfold-left"></span>
-                        </button>
-                    </div>-----Button Sing-in------- -->
+
+                </div><!-----------Button Sing-in---------->
+
+
             
+
+
             </div><!---End Row Level 2---->
+
+
 
             <div class="row d-flex align-items-center">
                     <div class="d-none d-md-block col-md-12 nav-menu">
@@ -107,9 +122,6 @@
                         </div>
     
                     </div><!---Navbar Menu Header -- Sync For Desktop------->
-
-
-
             </div><!---End Row Level 3---->
 
         </div>
