--- a/test.html
+++ b/test.html
@@ -62,7 +62,7 @@
                     <div class="row  d-flex justify-content-around">
                         <div class="col">
                             <div class="button-login">
-                                <button class="btn-cyan-600" data-bs-toggle="modal" data-bs-target="#menu-modal">
+                                <button class="btn-cyan-600">
                                         <span class="iconify" data-inline="false" data-icon="fa-solid:house-user"></span>
                                 </button>
                             </div>
@@ -141,7 +141,7 @@
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content modal-menu">
                 <div class="modal-header">
-                <h5 class="modal-title" id="staticBackdropLabel">منو</h5>
+                <h5 class="modal-title text-align-center" id="staticBackdropLabel">منو ایران پشتیبانی</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
