--- a/test.html
+++ b/test.html
@@ -167,7 +167,9 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="Buttons">
-
+                            <button class="btn-rose-500 btn-etlaat">اطلاعات بیشتر...</button>
+                            <button class="btn-violet-500  btn-moshavere">رایگان مشاوره بگیرید</button>
+                            <button class="btn-emerald-500 btn-sefaresh">سفارش دهید</button>
                         </div>
                     </div>
                 </div>
