--- a/test.html
+++ b/test.html
@@ -187,7 +187,7 @@
 
     <!-- Modal For Menu-->
     <div class="modal modal-menu" id="menu-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-        <div class="modal-dialog modal-xl modal-dialog-centered">
+        <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content modal-menu">
                 <div class="modal-header">
                 <h5 class="modal-title" id="staticBackdropLabel">منو ایران پشتیبانی</h5>
