--- a/test.html
+++ b/test.html
@@ -138,12 +138,12 @@
             <div class="container-fluid">
                 <div class="row">
                     
-                    <div class="col-3 col-sm-3 d-flex justify-content-center">
+                    <div class="col-3 col-sm-3 d-md-none">
                         <div class="titr-abote-design">
                             <h3>در هر کسب وکاری که مشغول به کار هستید نیاز به یک مارکت آنلاین دارید؛</h3>
                             <span>همین  حالا</span>
                         </div>
-                    </div>
+                    </div><!--------- Titr Aboute Design web -- Sync For Mobile ------->
 
                     
                     <div class="col-9 col-sm-9">
