--- a/test.html
+++ b/test.html
@@ -152,10 +152,10 @@
                     <div class="col-9 col-sm-9 d-md-none">
 
                         <div class="pic-design-web-sm">
-                            <img src="image/design-web.png" alt="">
+                            <img src="image/design-web-xl.png" alt="">
                         </div>
 
-                    </div><!-------- Pic img Fo web Design  -------->
+                    </div><!-------- Pic img Fo web Design -------->
                     
                     
                 </div>
@@ -211,7 +211,7 @@
                     <div class="col-md-9 d-none d-md-block d-lg-none">
 
                         <div class="pic-design-web-md">
-                            <img src="image/design-web.png" alt="">
+                            <img src="image/design-web-xl.png" alt="">
                         </div>
 
                     </div><!-------- Pic img Fo web Design  -------->
