--- a/Home.html
+++ b/Home.html
@@ -108,8 +108,8 @@
                         <img src="image/text-hamin.png" alt="همین حالا مارکت آنلاین خودتان را اختصاصی طراحی کنید">
 
                         <div class="button-itm1">
-                            <button type="button">اطلاعات بیشتر...</button>
-                            <button> سفارش دهید</button>
+                            <button type="button"  class="btn-xl-ete">اطلاعات بیشتر...</button>
+                            <button type="button"  class="btn-xl-sef"> سفارش دهید</button>
                         </div>
                     </div>
                 </div>
