add  nav menupost

--- a/Home.html
+++ b/Home.html
@@ -571,11 +571,11 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row d-flex">
 
 
+                <div class="col-3">
                 <aside>
-                    <div class="col-3">
                         <div class="box-softwer">
                             <div class="t-softwer">
                                 <h4>نرم افزار های ضروری</h4>
@@ -650,7 +650,22 @@
                     </div>
                 </aside><!-------------- softwere box download -->
 
+                <div class="col-9">
+                    <div class="nav-menu-post">
+                        <h2 class="title-nav-menu">مطالب آموزشی</h2>
+                        <img src="../image/img-nav-post-menu.png" alt="">
 
+                            <nav class="navmenu-item">
+                                <ul class="navmenu-ul">
+                                    <li>شبکه اجتماعی</li>
+                                    <li>کد نویسی</li>
+                                    <li>زیبا و خواندنی</li>
+                                    <li>وردپرس</li>
+                                </ul>
+                            </nav>
+
+                    </div>
+                </div>
 
 
             </div>
