--- a/Home.html
+++ b/Home.html
@@ -665,6 +665,65 @@
                             </nav>
 
                     </div>
+
+                    <div class="row">
+                        <div class="col-3">
+                            <div class="box-post">
+                                <a href="#">
+                                    <div class="time-post">
+                                        <span class="date">
+                                            1399/10/20
+                                        </span>
+                                        <div class="visit">
+                                            <span class="number-vi">
+                                                110
+                                            </span>
+                                            <span class="icon-visit">
+                                            <svg width="12" height="10" viewBox="0 0 12 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                    <path d="M10.425 6.81875C11.175 5.99375 11.625 5.15 11.625 4.6625C11.625 3.55625 9.1125 0.3125 6 0.3125C2.8875 0.3125 0.375 3.55625 0.375 4.6625C0.375 5.76875 2.8875 9.0125 6 9.0125C6.8625 9.0125 7.6875 8.76875 8.41875 8.375L10.425 9.6875V6.81875Z" fill="#A6A6A6"/>
+                                                    <path d="M6 7.47461C7.5533 7.47461 8.8125 6.21541 8.8125 4.66211C8.8125 3.10881 7.5533 1.84961 6 1.84961C4.4467 1.84961 3.1875 3.10881 3.1875 4.66211C3.1875 6.21541 4.4467 7.47461 6 7.47461Z" fill="white"/>
+                                                    <path d="M6 2.97461C5.8125 2.97461 5.64375 3.01211 5.475 3.04961C5.68125 3.21836 5.8125 3.48086 5.8125 3.76211C5.8125 4.28711 5.4 4.69961 4.875 4.69961C4.66875 4.69961 4.48125 4.62461 4.3125 4.51211V4.64336C4.3125 5.58086 5.0625 6.33086 6 6.33086C6.9375 6.33086 7.6875 5.58086 7.6875 4.64336C7.6875 3.70586 6.9375 2.97461 6 2.97461Z" fill="#666666"/>
+                                                </svg>                                                    
+                                            </span>
+                                        </div>
+                                    </div>
+                                    <img src="#" alt="">
+                                    <div class="content-post">
+                                        <h2 class="title-post">
+                                            آموزش جاوا اسکریپت
+                                        </h2>
+
+                                        <p class="excerpet">
+                                            زبان سمت سرور جاوا اسکریپت وظیفه ایجاد تعاملات بین صفحات وب را به عهده دارند ،و ...
+                                        </p>
+                                    </div>
+                                    <div class="information">
+                                        <div class="Author">
+
+                                            <!-- //todo::اینجا باید حالت اطلاعات نویسنده به صورت هاور نمایش بدهد -->
+                                            <img src="../image/auther-pic.svg" alt="">
+                                        </div>
+
+                                        <div class="categories">
+                                            <span class="categories">برنامه نویسی</span>
+                                            <span class="categories">javaScript</span>
+                                        </div>
+                                        <div class="button-l-c-b"><!---like&coments&bookmark-->
+                                            <button class="like">
+                                                <img src="../image/button-like.svg" alt="">
+                                            </button>
+                                            <button>
+                                                <img src="../image/button-coments.svg" alt="">
+                                            </button>
+                                            <button>
+                                                <img src="../image/button-bookmark.svg" alt="">
+                                            </button>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
 
