--- a/Home.html
+++ b/Home.html
@@ -1120,6 +1120,12 @@
         </div>
     </main>
 
+    <footer>
+        <div class="footer-ir">
+            
+        </div>
+    </footer>
+
 
 
 
