--- a/Home.html
+++ b/Home.html
@@ -1122,7 +1122,22 @@
 
     <footer>
         <div class="footer-ir">
-            
+            <div class="container">
+                <div class="row">
+                    <div class="col-3">
+                        <div class="about-box-footer">
+                            <h5>درباره ما</h5>
+                            <div class="content-about-box">
+                                طراحی و پشتیبانی خدمات سایت،ارائه بهترین خدمات پشتیبانی برای شما مدیران محترم وب سایت تا بهترین سرویس دهی را به مشتریان خود داشته باشید .
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-3">
+                        div.
+                    </div>
+                </div>
+            </div>
         </div>
     </footer>
 
