add footer quick

--- a/Home.html
+++ b/Home.html
@@ -1125,7 +1125,20 @@
             <div class="container">
                 <div class="row">
                     
+                    <div class="col-2">
+                        <div class="quick-ac">
+                            <h4 class="quick-title">
+                                دسترسی سریع
+                            </h4>
 
+                            <a href="#" class="itm-quic">
+                                <span class="icon-ir">
+                                    
+                                </span>
+                                طراحی وب سایت اختصاصی
+                            </a>
+                        </div>
+                    </div>
 
                 </div>
             </div>
